2003-01-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Can't reproduce the emacs editing bug anymore.
    
    * Fixed an emulation problem handling the CSI_RI and 
      CSI_IND tokens. This fixes the vi editing problem.
      

2003-01-01	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support for bold character attributes.
      Only works with fonts that support bold typeface
      such as Courier.
      
    * Fixed bug where a blink attribute would cause bold 
      attributes to be lost.
      
    * Validating paste menu item only if there is a string 
      type on the pasteboard.
      
    * New resizing code did not really work, so disbled it 
      and using original method.
      

2002-12-31	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed some resizing issues by implementing 
      windowWillResize: toSize: window delegate method.
      
    * Default shell command is "login -fp $USER" to start 
      a login shell.
      

2002-12-30	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Setting TERM_PROGRAM environment variable to iTerm.app.
    
    * Added flag to disable anti-aliasing. Chinese NIBS need 
      to be updated.
    

2002-12-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added Save/Print functionality.
      Chinese NIBs and localized strings file need to be 
      updated.
      
    * Fixed some horizontal tabbing issues in VT100Screeen.
      Now pre-populating tab array with tabs every TABWIDTH 
      on init since we won't always get CSI_HTS command 
      before a tab is issued. Also ensuring that we move 
      to the next tab if we are already on one.


2002-12-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug that cause the tabview item label 
      attributes to be released when any session was 
      closed. Dictionaries had been static class variables 
      instead of belonging to specific instances.
      
    * Optimized code for setting tab label attributes so 